fixed sidebard overflow

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@ html {
 	color: white;
 	background-color: rgb(22, 5, 41);
 	font-family: 'Courier New';
-	overflow: hidden;
 }
 body {
 	padding: 0;
@@ -28,6 +27,7 @@ input[type=range] {
 #controls-div {
 	vertical-align: top;
 	background-color: rgb(58, 3, 80);
+	overflow: scroll;
 }
 #controls {
 	padding: 1em;
@@ -79,6 +79,7 @@ input[type=range] {
 		display: inline-block;
 		width:   13em;
 		height: 100%;
+		overflow: scroll;
 	}
 	.control-group {
 		margin-top: 1em;
